--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Adrielle Rivera</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
+    <div class="container">
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav align-items-center">
+                <li class="nav-item">
+                    <a class="navbar-brand nav-link" href="#">Adrielle Rivera</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
@@ -33,8 +32,12 @@
                 </li>
             </ul>
         </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
     </div>
 </nav>
+
 
 <!-- Carousel -->
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -75,6 +78,64 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+
+<!--Video Section-->
+<section id="video-section" class="py-5 bg-dark text-light">
+  <div class="container text-center">
+    <h2 class="mb-4">Watch Our Video</h2>
+    <div class="ratio ratio-16x9">
+      <iframe width="460" height="315" src="https://www.youtube.com/embed/FHjmdq3ij2U?si=re4Wmm8avJwlWufh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+  </div>
+</section>
+
+
+
+<!--Project Section-->
+<section id="projects" class="py-5">
+  <div class="container">
+    <h2 class="text-center mb-4">Projects</h2>
+    <div class="row g-4">
+      <div class="col-md-3">
+        <div class="card">
+          <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Project 1">
+          <div class="card-body text-center">
+            <h5 class="card-title">Project 1</h5>
+            <button class="btn btn-primary">View Details</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card">
+          <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Project 2">
+          <div class="card-body text-center">
+            <h5 class="card-title">Project 2</h5>
+            <button class="btn btn-primary">View Details</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card">
+          <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Project 3">
+          <div class="card-body text-center">
+            <h5 class="card-title">Project 3</h5>
+            <button class="btn btn-primary">View Details</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card">
+          <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Project 4">
+          <div class="card-body text-center">
+            <h5 class="card-title">Project 4</h5>
+            <button class="btn btn-primary">View Details</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 <!-- Skills Section -->
 <div class="container my-5">
