--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
           <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Project 1">
           <div class="card-body text-center">
             <h5 class="card-title">Project 1</h5>
-            <button class="btn btn-primary">View Details</button>
+            <p class="card-text">A brief description about Project 1 goes here.</p>
+            <a href="project1-details.html" class="btn btn-success">View Details</a>
           </div>
         </div>
       </div>
@@ -110,7 +111,8 @@
           <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Project 2">
           <div class="card-body text-center">
             <h5 class="card-title">Project 2</h5>
-            <button class="btn btn-primary">View Details</button>
+            <p class="card-text">A brief description about Project 2 goes here.</p>
+            <a href="project2-details.html" class="btn btn-primary">View Details</a>
           </div>
         </div>
       </div>
@@ -119,7 +121,8 @@
           <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Project 3">
           <div class="card-body text-center">
             <h5 class="card-title">Project 3</h5>
-            <button class="btn btn-primary">View Details</button>
+            <p class="card-text">A brief description about Project 3 goes here.</p>
+            <a href="project3-details.html" class="btn btn-primary">View Details</a>
           </div>
         </div>
       </div>
@@ -128,13 +131,16 @@
           <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Project 4">
           <div class="card-body text-center">
             <h5 class="card-title">Project 4</h5>
-            <button class="btn btn-primary">View Details</button>
+            <p class="card-text">A brief description about Project 4 goes here.</p>
+            <a href="project4-details.html" class="btn btn-primary">View Details</a>
           </div>
         </div>
       </div>
     </div>
   </div>
 </section>
+
+
 
 
 <!-- Skills Section -->
