--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <!-- Bootstrap 5.3 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+<style>
+  .btn-success:hover {
+    background-color: #0d6efd;
+    border-color: #0d6efd; 
+  }
+</style>    
 <body>
 
 <!-- Navigation -->
