--- a/index.html
+++ b/index.html
@@ -184,6 +184,35 @@
     </div>
 </div>
 
+<!-- Contact Form Section with Dark Background -->
+<section class="bg-dark text-white py-5">
+  <div class="container">
+    <h2 class="text-center mb-4">Contact Me</h2>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <form class="p-4 border border-2 rounded bg-light text-dark">
+          <div class="mb-3">
+            <label for="name" class="form-label">Name</label>
+            <input type="text" class="form-control" id="name" placeholder="Enter your name" required>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+          </div>
+          <div class="mb-3">
+            <label for="message" class="form-label">Message</label>
+            <textarea class="form-control" id="message" rows="5" placeholder="Type your message" required></textarea>
+          </div>
+          <div class="text-center">
+            <button type="submit" class="btn btn-primary">Send</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 <!-- Footer -->
 <footer class="bg-dark text-white text-center py-4">
     <p>&copy; 2024 My Portfolio. All Rights Reserved.</p>
