--- a/index.html
+++ b/index.html
@@ -89,11 +89,18 @@
 <section id="video-section" class="py-5 bg-dark text-light">
   <div class="container text-center">
     <h2 class="mb-4">Watch Our Video</h2>
-    <div class="ratio ratio-16x9">
-      <iframe width="460" height="315" src="https://www.youtube.com/embed/FHjmdq3ij2U?si=re4Wmm8avJwlWufh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div class="ratio ratio-16x9" style="max-width: 640px; margin: 0 auto;">
+      <iframe src="https://www.youtube.com/embed/FHjmdq3ij2U?si=re4Wmm8avJwlWufh" 
+              title="YouTube video player" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+              referrerpolicy="strict-origin-when-cross-origin" 
+              allowfullscreen>
+      </iframe>
     </div>
   </div>
 </section>
+
 
 
 
