--- a/index.html
+++ b/index.html
@@ -219,6 +219,53 @@
   </div>
 </section>
 
+<!--QuickLinks-->
+
+<section id="navigation-links" class="py-5 bg-light">
+  <div class="container">
+    <h2 class="text-center mb-4">Quick Links</h2>
+    <div class="row">
+      <div class="col-md-3 col-sm-6 mb-3">
+        <h5>Articles</h5>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-dark">What is Bootstrap?</a></li>
+          <li><a href="#" class="text-dark">What is Javascript?</a></li>
+          <li><a href="#" class="text-dark">Is Laravel to use?</a></li>
+          <li><a href="#" class="text-dark">What is VA?</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3 col-sm-6 mb-3">
+        <h5>Contacts</h5>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-dark">Link 5</a></li>
+          <li><a href="#" class="text-dark">Link 6</a></li>
+          <li><a href="#" class="text-dark">Link 7</a></li>
+          <li><a href="#" class="text-dark">Link 8</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3 col-sm-6 mb-3">
+        <h5>Projects</h5>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-dark">Link 9</a></li>
+          <li><a href="#" class="text-dark">Link 10</a></li>
+          <li><a href="#" class="text-dark">Link 11</a></li>
+          <li><a href="#" class="text-dark">Link 12</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3 col-sm-6 mb-3">
+        <h5>Category 4</h5>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-dark">Link 13</a></li>
+          <li><a href="#" class="text-dark">Link 14</a></li>
+          <li><a href="#" class="text-dark">Link 15</a></li>
+          <li><a href="#" class="text-dark">Link 16</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 
 <!-- Footer -->
 <footer class="bg-dark text-white text-center py-4">
