--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav align-items-center">
@@ -54,24 +54,24 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="https://via.placeholder.com/1200x400" class="d-block w-100" alt="Project 1">
+            <img src="images/banner-1.jpg" class="d-block w-100" alt="Project 1">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Project 1</h5>
-                <p>My first awesome project.</p>
+                <!-- <h5 class="text-dark"></h5>
+                <p class="text-dark">My first awesome project.</p> -->
             </div>
         </div>
         <div class="carousel-item">
-            <img src="https://via.placeholder.com/1200x400" class="d-block w-100" alt="Project 2">
+            <img src="images/banner-2.jpg" class="d-block w-100" alt="Project 2">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Project 2</h5>
-                <p>Another great project I worked on.</p>
+                <!-- <h5>Project 2</h5>
+                <p>Another great project I worked on.</p> -->
             </div>
         </div>
         <div class="carousel-item">
-            <img src="https://via.placeholder.com/1200x400" class="d-block w-100" alt="Project 3">
+            <img src="images/banner-3.jpg" class="d-block w-100" alt="Project 3">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Project 3</h5>
-                <p>A cool project I built using modern technologies.</p>
+                <!-- <h5>Project 3</h5>
+                <p>A cool project I built using modern technologies.</p> -->
             </div>
         </div>
     </div>
