--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="row g-4">
       <div class="col-md-3">
         <div class="card">
-          <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Project 1">
+          <img src="images/project-1.jpg" class="card-img-top" alt="Project-1">
           <div class="card-body text-center">
             <h5 class="card-title">Project 1</h5>
             <p class="card-text">A brief description about Project 1 goes here.</p>
@@ -121,7 +121,7 @@
       </div>
       <div class="col-md-3">
         <div class="card">
-          <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Project 2">
+          <img src="images/project-2.jpg" class="card-img-top" alt="Project-2">
           <div class="card-body text-center">
             <h5 class="card-title">Project 2</h5>
             <p class="card-text">A brief description about Project 2 goes here.</p>
@@ -131,7 +131,7 @@
       </div>
       <div class="col-md-3">
         <div class="card">
-          <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Project 3">
+          <img src="images/project-3.jpg" class="card-img-top" alt="Project-3">
           <div class="card-body text-center">
             <h5 class="card-title">Project 3</h5>
             <p class="card-text">A brief description about Project 3 goes here.</p>
@@ -141,7 +141,7 @@
       </div>
       <div class="col-md-3">
         <div class="card">
-          <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Project 4">
+          <img src="images/project-4.jpg" class="card-img-top" alt="Project-4">
           <div class="card-body text-center">
             <h5 class="card-title">Project 4</h5>
             <p class="card-text">A brief description about Project 4 goes here.</p>
