--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
                     <a class="nav-link" href="#">Contact</a>
                 </li>
             </ul>
+              <li class="nav-item dropdown">
+          <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </button>
+          <ul class="dropdown-menu dropdown-menu-dark">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -162,33 +172,55 @@
     <div class="row">
         <div class="col-md-6">
             <h5>HTML</h5>
-            <div class="progress mb-3">
+            <!-- <div class="progress mb-3">
                 <div class="progress-bar bg-success" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
-            </div>
+            </div> -->
+            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" style="width: 90%">90%</div>
+</div>
+
             <h5>CSS</h5>
-            <div class="progress mb-3">
+            <!-- <div class="progress mb-3">
                 <div class="progress-bar bg-info" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
-            </div>
+            </div> -->
+            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" style="width: 85%">85%</div>
+</div>
             <h5>JavaScript</h5>
-            <div class="progress mb-3">
+            <!-- <div class="progress mb-3">
                 <div class="progress-bar bg-warning" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
-            </div>
+            </div> -->
+            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar bg-warning progress-bar-striped progress-bar-animated" style="width: 80%">80%</div>
+</div>
         </div>
         <div class="col-md-6">
             <h5>React</h5>
-            <div class="progress mb-3">
+            <!-- <div class="progress mb-3">
                 <div class="progress-bar bg-primary" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
-            </div>
+            </div> -->
+            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar bg-primary progress-bar-striped progress-bar-animated" style="width: 75%">75%</div>
+</div>
             <h5>Next.js</h5>
-            <div class="progress mb-3">
+            <!-- <div class="progress mb-3">
                 <div class="progress-bar bg-dark" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
-            </div>
+            </div> -->
+            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" style="width: 70%">70%</div>
+</div>
             <h5>Node.js</h5>
-            <div class="progress mb-3">
+           <!--  <div class="progress mb-3">
                 <div class="progress-bar bg-secondary" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">65%</div>
-            </div>
+            </div> -->
+            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated" style="width: 65%">65%</div>
+</div>
         </div>
     </div>
+</div>
+<div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 100%">START</div>
 </div>
 
 <!-- Contact Form Section with Dark Background -->
@@ -218,6 +250,9 @@
     </div>
   </div>
 </section>
+<div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 100%">END</div>
+</div>
 
 <!--QuickLinks-->
 
