--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio Website</title>
+    <title>Portfolio Website - Adrielle Rivera</title>
     <!-- Bootstrap 5.3 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -13,6 +13,11 @@
     background-color: #0d6efd;
     border-color: #0d6efd; 
   }
+  #hover-link:hover {
+    color: yellow; /* Change text color */
+    text-decoration: underline; /* Add underline */
+    transition: all 0.3s ease; /* Smooth transition */                                
+}
 </style>    
 <body>
 
@@ -22,19 +27,19 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav align-items-center">
                 <li class="nav-item">
-                    <a class="navbar-brand nav-link" href="#">Adrielle Rivera</a>
+                    <a target="_blank" class="navbar-brand nav-link" href="https://www.linkedin.com/in/adrielle-rivera-355ab3290/" id="hover-link">Adrielle Rivera</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.youtube.com/">About</a>
+                    <a target="_blank" class="nav-link" href="https://adriellerivera.github.io/Bootstrap-project-link-2---Adrielle-Rivera/">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Projects</a>
+                    <a class="nav-link" href="#Projects">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#Contacts">Contact</a>
                 </li>
             </ul>
               <li class="nav-item dropdown">
@@ -115,7 +120,7 @@
 
 
 <!--Project Section-->
-<section id="projects" class="py-5">
+<section id="Projects" class="py-5">
   <div class="container">
     <h2 class="text-center mb-4">Projects</h2>
     <div class="row g-4">
@@ -224,7 +229,7 @@
 </div>
 
 <!-- Contact Form Section with Dark Background -->
-<section class="bg-dark text-white py-5">
+<section id="Contacts" class="bg-dark text-white py-5">
   <div class="container">
     <h2 class="text-center mb-4">Contact Me</h2>
     <div class="row justify-content-center">
