--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             Dropdown
           </button>
           <ul class="dropdown-menu dropdown-menu-dark">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#Quick-Links">Quick Links</a></li>
+            <li><a target="_blank" class="dropdown-item" href="https://adriellerivera.github.io/Bootstrap-project-link-2---Adrielle-Rivera/">Bootstrap Second Link</a></li>
+            <li><a target="_blank" class="dropdown-item" href="https://adriellerivera.github.io/First-CSS-link---Adrielle/">My CSS Project</a></li>
           </ul>
         </li>
         </div>
@@ -263,7 +263,7 @@
 
 <section id="navigation-links" class="py-5 bg-light">
   <div class="container">
-    <h2 class="text-center mb-4">Quick Links</h2>
+    <h2 id="Quick-Links" class="text-center mb-4">Quick Links</h2>
     <div class="row">
       <div class="col-md-3 col-sm-6 mb-3">
         <h5>Articles</h5>
