--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           </button>
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><a class="dropdown-item" href="#Quick-Links">Quick Links</a></li>
-            <li><a target="_blank" class="dropdown-item" href="https://adriellerivera.github.io/Bootstrap-project-link-2---Adrielle-Rivera/">Bootstrap Second Link</a></li>
             <li><a target="_blank" class="dropdown-item" href="https://adriellerivera.github.io/First-CSS-link---Adrielle/">My CSS Project</a></li>
+            <li><a target="_blank" class="dropdown-item" href="https://www.youtube.com/@VAWorkPH">My Youtube Channel</a></li>
           </ul>
         </li>
         </div>
