--- a/index.html
+++ b/index.html
@@ -126,11 +126,13 @@
     <div class="row g-4">
       <div class="col-md-3">
         <div class="card">
+            <a href="https://adriellerivera.github.io/samplecode-for-my-project-in-LCT/">
           <img src="images/project-1.jpg" class="card-img-top" alt="Project-1">
+          </a>
           <div class="card-body text-center">
             <h5 class="card-title">Project 1</h5>
-            <p class="card-text">A brief description about Project 1 goes here.</p>
-            <a href="project1-details.html" class="btn btn-success">View Details</a>
+            <p class="card-text">My First Website in Learn Computer Today Philippines</p>
+            <a href="https://adriellerivera.github.io/samplecode-for-my-project-in-LCT/" target="_blank" class="btn btn-success">View Details</a>
           </div>
         </div>
       </div>
