--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
     <div class="row g-4">
       <div class="col-md-3">
         <div class="card">
-            <a href="https://adriellerivera.github.io/samplecode-for-my-project-in-LCT/">
+            <a target ="_blank" href="https://adriellerivera.github.io/samplecode-for-my-project-in-LCT/">
           <img src="images/project-1.jpg" class="card-img-top" alt="Project-1">
           </a>
           <div class="card-body text-center">
-            <h5 class="card-title">Project 1</h5>
+            <h5 class="card-title">I am Web Dev Website.</h5>
             <p class="card-text">My First Website in Learn Computer Today Philippines</p>
             <a href="https://adriellerivera.github.io/samplecode-for-my-project-in-LCT/" target="_blank" class="btn btn-success">View Details</a>
           </div>
@@ -138,11 +138,13 @@
       </div>
       <div class="col-md-3">
         <div class="card">
+            <a target ="_blank" href="https://adriellerivera.github.io/Front-Mentor---Adrielle-Rivera/">
           <img src="images/project-2.jpg" class="card-img-top" alt="Project-2">
+          </a>
           <div class="card-body text-center">
-            <h5 class="card-title">Project 2</h5>
-            <p class="card-text">A brief description about Project 2 goes here.</p>
-            <a href="project2-details.html" class="btn btn-primary">View Details</a>
+            <h5 class="card-title">Sample Card with Nav bar</h5>
+            <p class="card-text">My first project in Front-End Mentor Website</p>
+            <a target="_blank" href="https://adriellerivera.github.io/Front-Mentor---Adrielle-Rivera/" class="btn btn-primary">View Details</a>
           </div>
         </div>
       </div>
