--- a/index.html
+++ b/index.html
@@ -18,6 +18,28 @@
     text-decoration: underline; /* Add underline */
     transition: all 0.3s ease; /* Smooth transition */                                
 }
+ .card-title {
+    min-height: 60px; /* Ensures uniform height for titles */
+    font-size: 1.25rem; /* Adjusts font size for consistency */
+    line-height: 1.4; /* Improves readability */
+    margin-bottom: 15px; /* Adds space below the title */
+  }
+  .card-text {
+    min-height: 80px; /* Ensures uniform height for paragraph text */
+    font-size: 1rem; /* Keeps text size consistent */
+    line-height: 1.5; /* Improves text spacing */
+  }
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Ensures button stays at the bottom */
+    text-align: center;
+  }
+    .btn-primary:hover{
+        background: #28a745;
+    }
+
+  
 </style>    
 <body>
 
@@ -132,7 +154,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">I am Web Dev Website.</h5>
             <p class="card-text">My First Website in Learn Computer Today Philippines</p>
-            <a href="https://adriellerivera.github.io/samplecode-for-my-project-in-LCT/" target="_blank" class="btn btn-success">View Details</a>
+            <a href="https://adriellerivera.github.io/samplecode-for-my-project-in-LCT/" target="_blank" class="btn btn-success" id="button-2">View Details</a>
           </div>
         </div>
       </div>
@@ -142,7 +164,7 @@
           <img src="images/project-2.jpg" class="card-img-top" alt="Project-2">
           </a>
           <div class="card-body text-center">
-            <h5 class="card-title">Sample Card with Nav bar</h5>
+            <h5 class="card-title">Sample Card with Nav bar links challenge</h5>
             <p class="card-text">My first project in Front-End Mentor Website</p>
             <a target="_blank" href="https://adriellerivera.github.io/Front-Mentor---Adrielle-Rivera/" class="btn btn-primary">View Details</a>
           </div>
@@ -150,21 +172,25 @@
       </div>
       <div class="col-md-3">
         <div class="card">
+            <a href="https://adriellerivera.github.io/First-CSS-link---Adrielle/" target="_blank">
           <img src="images/project-3.jpg" class="card-img-top" alt="Project-3">
+          </a>
           <div class="card-body text-center">
-            <h5 class="card-title">Project 3</h5>
-            <p class="card-text">A brief description about Project 3 goes here.</p>
-            <a href="project3-details.html" class="btn btn-primary">View Details</a>
+            <h5 class="card-title">CSS Foundation assignment in LCT Philippines</h5>
+            <p class="card-text">I created my own work experience and portfolio using HTML and CSS</p>
+            <a target="_blank" href="https://adriellerivera.github.io/First-CSS-link---Adrielle/" class="btn btn-primary">View Details</a>
           </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card">
+            <a href="https://adriellerivera.github.io/Dennise-Bello---Portfolio/" target="_blank">
           <img src="images/project-4.jpg" class="card-img-top" alt="Project-4">
+          </a>
           <div class="card-body text-center">
-            <h5 class="card-title">Project 4</h5>
-            <p class="card-text">A brief description about Project 4 goes here.</p>
-            <a href="project4-details.html" class="btn btn-primary">View Details</a>
+            <h5 class="card-title">Dennise Bello Portfolio</h5>
+            <p class="card-text">I created a work experience portfolio for my fiancée (ongoing, not yet finish) </p>
+            <a target="_blank" href="https://adriellerivera.github.io/Dennise-Bello---Portfolio/" class="btn btn-primary">View Details</a>
           </div>
         </div>
       </div>
