--- a/index.html
+++ b/index.html
@@ -296,39 +296,39 @@
     <h2 id="Quick-Links" class="text-center mb-4">Quick Links</h2>
     <div class="row">
       <div class="col-md-3 col-sm-6 mb-3">
-        <h5>Articles</h5>
+        <h5>Other Projects</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-dark">What is Bootstrap?</a></li>
-          <li><a href="#" class="text-dark">What is Javascript?</a></li>
-          <li><a href="#" class="text-dark">Is Laravel to use?</a></li>
-          <li><a href="#" class="text-dark">What is VA?</a></li>
+          <li><a target="_blank" href="https://adriellerivera.github.io/Penguin-FreeCodecamp/" class="text-dark">Animated CSS penguin</a></li>
+          <li><a target="_blank"  href="https://adriellerivera.github.io/Portfolio-Website/" class="text-dark">Freecodecamp First Portfolio</a></li>
+          <li><a target="_blank"  href="https://adriellerivera.github.io/Form---freecodecamp/" class="text-dark">Freecodecamp First Form</a></li>
+          <li><a target="_blank"  href="https://adriellerivera.github.io/Ferris-Wheel---freeCodeCamp/" class="text-dark">Animated CSS Ferris Wheel</a></li>
         </ul>
       </div>
       <div class="col-md-3 col-sm-6 mb-3">
-        <h5>Contacts</h5>
+        <h5>Other Projects part two</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-dark">Link 5</a></li>
-          <li><a href="#" class="text-dark">Link 6</a></li>
-          <li><a href="#" class="text-dark">Link 7</a></li>
-          <li><a href="#" class="text-dark">Link 8</a></li>
+          <li><a target="_blank"  href="https://adriellerivera.github.io/CSS-Variables---freeCodeCamp/" class="text-dark">CSS Variables - Night City</a></li>
+          <li><a target="_blank"  href="https://adriellerivera.github.io/Magazine-FreeCodeCamp/" class="text-dark">Freecodecamp Magazine</a></li>
+          <li><a target="_blank"  href="https://adriellerivera.github.io/freeCodecamp---Accessibility-Quiz./" class="text-dark">Freecodecamp Accessability Quiz</a></li>
+          <li><a target="_blank"  href="https://adriellerivera.github.io/Portfolio-Coursera/" class="text-dark">Coursera First Portfolio</a></li>
         </ul>
       </div>
       <div class="col-md-3 col-sm-6 mb-3">
-        <h5>Projects</h5>
+        <h5>My Socials</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-dark">Link 9</a></li>
-          <li><a href="#" class="text-dark">Link 10</a></li>
-          <li><a href="#" class="text-dark">Link 11</a></li>
-          <li><a href="#" class="text-dark">Link 12</a></li>
+          <li><a target="_blank"  href="https://web.facebook.com/AdrielleRiveraa/" class="text-dark">Facebook</a></li>
+          <li><a target="_blank"  href="https://www.instagram.com/" class="text-dark">Instagram</a></li>
+          <li><a target="_blank"  href="https://www.linkedin.com/in/adrielle-rivera-355ab3290/" class="text-dark">Linkedin</a></li>
+          <li><a target="_blank"  href="https://www.youtube.com/@VAWorkPH" class="text-dark">Youtube</a></li>
         </ul>
       </div>
       <div class="col-md-3 col-sm-6 mb-3">
-        <h5>Category 4</h5>
+        <h5>Socials, ETC.</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-dark">Link 13</a></li>
-          <li><a href="#" class="text-dark">Link 14</a></li>
-          <li><a href="#" class="text-dark">Link 15</a></li>
-          <li><a href="#" class="text-dark">Link 16</a></li>
+          <li><a target="_blank"  href="https://adriellerivera.github.io/Bootstrap-project-link-2---Adrielle-Rivera/" class="text-dark">Bootstrap Link 2</a></li>
+          <li><a target="_blank"  href="#" class="text-dark">Bootstrap Link 3</a></li>
+          <li><a target="_blank"  href="https://github.com/AdrielleRivera" class="text-dark">My Github Account</a></li>
+          <li><a target="_blank"  href="https://x.com/AdrielleRiveraa" class="text-dark">Twitter</a></li>
         </ul>
       </div>
     </div>
