--- a/index.html
+++ b/index.html
@@ -339,11 +339,11 @@
 
 <!-- Footer -->
 <footer class="bg-dark text-white text-center py-4">
-    <p>&copy; 2024 My Portfolio. All Rights Reserved.</p>
+    <p class="text-white">&copy; 2024 My Portfolio - <a target="_blank" href="https://www.linkedin.com/in/adrielle-rivera-355ab3290/" class="text-white" id="ad-1">Adrielle Rivera.</a> All Rights Reserved.</p>
     <p>Follow me on 
-        <a href="#" class="text-white">LinkedIn</a>, 
-        <a href="#" class="text-white">GitHub</a>, 
-        <a href="#" class="text-white">Twitter</a>
+        <a target="_blank" href="https://www.linkedin.com/in/adrielle-rivera-355ab3290/" class="text-white">LinkedIn</a>, 
+        <a target="_blank" href="https://github.com/AdrielleRivera" class="text-white">GitHub</a>, 
+        <a target="_blank" href="https://x.com/AdrielleRiveraa" class="text-white">Twitter</a>
     </p>
 </footer>
 
