--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a target="_blank" class="nav-link" href="https://adriellerivera.github.io/Bootstrap-project-link-2---Adrielle-Rivera/">About</a>
+                    <a target="_blank" class="nav-link" href="https://adriellerivera.github.io/Bootstrap-project-link-2---Adrielle-Rivera/">About(2nd link)</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#Projects">Projects</a>
