--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                     <a target="_blank" class="nav-link" href="https://adriellerivera.github.io/Bootstrap-project-link-2---Adrielle-Rivera/">About(2nd link)</a>
                 </li>
                 <li class="nav-item">
+                    <a target="_blank" class="nav-link" href="https://adriellerivera.github.io/Bootstrap-project-link-3---Adrielle-Rivera/">E-commerce(3rd link)</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#Projects">Projects</a>
                 </li>
                 <li class="nav-item">
@@ -326,7 +329,7 @@
         <h5>Socials, ETC.</h5>
         <ul class="list-unstyled">
           <li><a target="_blank"  href="https://adriellerivera.github.io/Bootstrap-project-link-2---Adrielle-Rivera/" class="text-dark">Bootstrap Link 2</a></li>
-          <li><a target="_blank"  href="#" class="text-dark">Bootstrap Link 3</a></li>
+          <li><a target="_blank"  href="https://adriellerivera.github.io/Bootstrap-project-link-3---Adrielle-Rivera/" class="text-dark">Bootstrap Link 3</a></li>
           <li><a target="_blank"  href="https://github.com/AdrielleRivera" class="text-dark">My Github Account</a></li>
           <li><a target="_blank"  href="https://x.com/AdrielleRiveraa" class="text-dark">Twitter</a></li>
         </ul>
